--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -1,8 +1,51 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700&family=Roboto+Mono:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700&family=Roboto+Mono:wght@300&display=swap')
 
 
 
 
 body
-    // font-family: 'Raleway', sans-serif
-    // font-size: 20px
+    font-family: $font-main
+    font-size: 16px 
+    color: $white
+    background-color: $dark
+
+
+a
+    color: $white
+    transition:  color .3s ease-in
+    text-decoration: none
+    &:hover
+        color: $accent
+
+.container
+    max-width: 1140px
+    padding: 0 15px
+    margin: 0 auto
+
+
+.visually-hidden
+    height: 1px
+    width: 1px
+    overflow: hidden
+    position: absolute
+    clip: rect(1px 1px 1px 1px)
+    clip: rect(1px, 1px, 1px, 1px)
+    clip-path: inset(50%)
+    white-space: nowrap
+
+.text-right
+    text-align: right
+
+.none
+    display: none !important
+
+.title-2
+    color: $accent
+    font-size: 36px
+    font-family: $font-accent
+    font-weight: 700
+
+
+li
+    list-style-type: none
+
