--- a/sass/base/_vars.sass
+++ b/sass/base/_vars.sass
@@ -11,5 +11,10 @@ $dark: #242B33
 $accent: #D4C17F
 $white: #fff
 $footer-bg: #2D343C
+$placeholder-color: #2D343C
+$muted : #E7E7E7
+$map-bg: #626262
 
+// Media
 
+$tablet: 999px
