--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,8 +1,20 @@
+@import './base/reset'
 @import './base/vars'
 @import './base/base'
+@import './block/mixins'
 
+// block
 
-
-body
-    background-color: red
-    font-family: $$font-main
+@import './block/header'
+@import './block/nav'
+@import './block/info'
+@import './block/benefits'
+@import './block/apartaments'
+@import './block/card'
+@import './block/cta'
+@import './block/form'
+@import './block/video'
+@import './block/map'
+@import './block/section-map'
+@import './block/question'
+@import './block/footer'
