--- a/sass/block/header.sass
+++ b/sass/block/header.sass
@@ -21,6 +21,22 @@ header
     justify-content: space-between
     align-items: center
 
+.header__top-row-mobile
+    transition: all .3s
+    position: fixed
+    background-color: #252424
+    top: 0
+    left: 0
+    width: 100vw
+    height: 100vh
+    z-index: 5
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    row-gap: 40px
+    overflow-y: hidden   
+
 .header__nav
     display: flex
 
@@ -29,10 +45,18 @@ header
 .header__nav
     display: flex
 
-
+.header-logo
+    width: 80px
+    height: 60px
 
 .header__nav-btn
     display: none
+    padding: 10p
+    width: 45px
+    height: 35px
+    background-color: $white
+    border: 0
+    border-radius: 10px
     @include  mediaTablet
         display: block
 
