--- a/sass/block/nav.sass
+++ b/sass/block/nav.sass
@@ -1,6 +1,18 @@
-.nav
+.header__nav
     font-size: 14px
     letter-spacing: 0.05em
+
+
+.header__top-row-mobile .header__nav
+    display: flex
+    flex-direction: column
+    align-items: center
+    gap: 40px
+    .header__nav-list
+        display: flex
+        flex-direction: column
+        align-items: center
+        gap: 40px
 
 .header__nav-list
     display: flex
@@ -8,3 +20,4 @@
     column-gap: 40px
     @include  mediaTablet
         display: none
+
